<resources>
    <string name="app_name">Water Locate</string>
    <string name="title_activity_maps">Map</string>
    <string name="img_str_direction_desc">Icon for getting polyline for closest marker</string>
    <string name="str_start_welcome_title1">Welcome to</string>
    <string name="str_start_welcome_title2">Water Locate</string>
    <string name="str_continue_as">Continue as</string>
    <string name="str_user">User</string>
    <string name="str_user_start_description">Locate closest tanker drivers</string>
    <string name="str_driver">Driver</string>
    <string name="str_login">Log In</string>
    <string name="str_name">Name</string>
    <string name="str_email">Email</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_signup">Sign up</string>
    <string name="str_new_user">New User?</string>
    <string name="str_new_account">Create User Account</string>
    <string name="str_have_account">Have an account?</string>
    <string name="str_create_account">Create Account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="str_phone_number">Mobile No.</string>
    <string name="str_start_user_title_image_desc">User image for start card button</string>
    <string name="str_start_driver_title_image_desc">Icon for start driver card button</string>
    <string name="str_driver_start_description">Locate closest bore holes</string>
    <string name="str_driver_new_account_title">Create Driver Account</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="str_welcome_user">Hey %1$s</string>
    <string name="str_water_drop_icon_desc">Water drop icon to describe water tanker with water for users</string>
    <string name="str_amount_tankers_with_water">0</string>
    <string name="str_water_tankers">Water Tankers</string>
    <string name="str_user_home_no_water_icon_desc">Icon to show no water is available in a water tanker or water tanker is empty</string>
    <string name="str_empty_water_tankers_amount">0</string>
    <string name="str_user_home_location_icon_desc">Location icon for user home page menu</string>
    <string name="str_locate_water_tankers">Locate Water Tankers</string>
    <string name="str_useR_home_menu_locate_subtitle">Locate live tanker drivers</string>
    <string name="str_right_arrow_description">Right arrow icon for home menus</string>
    <string name="str_drivers">Drivers</string>
    <string name="str_settings">Settings</string>
    <string name="str_user_home_drivers_list_subtitle">List of drivers</string>
    <string name="str_account_settings">Manage account settings</string>
    <string name="icn_user_home_toolbar_user_desc">Icon of user for user home in menu button area</string>
    <string name="str_signout">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_locate_bore_holes">Locate Bore holes</string>
    <string name="str_driver_home_menu_locate_borehole">Locate closest bore holes</string>
    <string name="str_toggle_off">Empty</string>
    <string name="str_toggle_on">Full</string>
    <string name="str_status_note">Drivers will not be visible to users on the map when tank is empty.</string>
    <string name="str_mobile_phone_no">Phone number</string>
    <string name="str_toggle_button_text">Water Status</string>

    <string name="str_online">Online</string>
    <string name="str_offline">Offline</string>
    <string name="str_profile_settings">Profile Settings</string>
    <string name="str_save">Save</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_dropdown_icon_desc">Dropdown icon for settings</string>
    <string name="str_drop_down_icon_desc">Description for dropdown icon</string>
    <string name="str_closest_driver_icon_desc">Driver icon to illustrate driver avatar</string>
    <string name="str_close">close</string>

</resources>