<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".driver.fragments.home.DriverHomeFragment"
    android:id="@+id/driverHomeConstraint">

    <TextView
        android:id="@+id/tvWelcomeDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/baloo"
        android:text="@string/str_welcome_user"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLayoutDriverName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvShimmerWelcomeDriver"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/shimmer_placeholder" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdUserDriversAvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:contentPadding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeDriver">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLiveStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:visibility="gone" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmerLayoutDriverStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvShimmerDriverStatus"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@color/shimmer_placeholder" />
                </com.facebook.shimmer.ShimmerFrameLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <ToggleButton
                    android:id="@+id/tgBtnWaterTankerStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_toggle_button_text"
                    android:textOff="@string/str_toggle_off"
                    android:textOn="@string/str_toggle_on" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvDriverStatusNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/str_status_note"
                android:textColor="@color/design_default_color_error"
                android:textSize="12sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crdUserDriversAvailable">

        <androidx.cardview.widget.CardView
            android:id="@+id/crdDriverOpenMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardElevation="2dp"
            app:contentPadding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgUserHomeMenuLocationIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:contentDescription="@string/str_user_home_location_icon_desc"
                    app:srcCompat="@drawable/ic_location__2_" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserHomeMenuLocateTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/str_locate_bore_holes"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvUserHomeMenuLocateSubtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/str_driver_home_menu_locate_borehole" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:contentDescription="@string/str_right_arrow_description"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/ic_right_arrow_angle__1_" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

     <!--   <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardElevation="2dp"
            app:contentPadding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgUserHomeMenuDriversIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:contentDescription="@string/str_user_home_location_icon_desc"
                    app:srcCompat="@drawable/ic_driver" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserHomeMenuDriverTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/str_drivers"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvUserHomeMenuDriverSubtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/str_user_home_drivers_list_subtitle" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:contentDescription="@string/str_right_arrow_description"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/ic_right_arrow_angle__1_" />

            </LinearLayout>
        </androidx.cardview.widget.CardView> -->

        <androidx.cardview.widget.CardView
            android:id="@+id/crdDriverOpenSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardElevation="2dp"
            app:contentPadding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgUserHomeMenuSettingsIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:contentDescription="@string/str_user_home_location_icon_desc"
                    app:srcCompat="@drawable/ic_user__4_" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserHomeMenuSettingsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/str_settings"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvUserHomeMenuSettingsSubtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/str_account_settings" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:contentDescription="@string/str_right_arrow_description"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/ic_right_arrow_angle__1_" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>